<resources>
    <string name="app_name">TopGrossingMovies</string>
    <string name="top_grossing_movies_of_all_time">Top grossing movies of all time</string>
    <string name="start">Start</string>
    <string name="_6">#6</string>
    <string name="inception">Inception</string>
    <string name="_2010">(2010)</string>
    <string name="_825_532_764">$825,532,764</string>
    <string name="more_info">More info</string>
    <string name="desc">desc</string>
</resources>
