<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.martoraneca.topgrossingmovies.MainMoviesActivity">

    <TextView
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:textSize="30sp"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/movieName"
        android:layout_below="@id/place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inception"
        android:paddingTop="5dp"
        android:textSize="26sp"
        android:gravity="center"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/movieYear"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2010"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/movieName"
        />

    <ImageView
        android:contentDescription="@string/desc"
        android:id="@+id/moviePoster"
        android:padding="10dp"
        android:layout_below="@id/movieYear"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/inception"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/movieGross"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_825_532_764"
        android:textSize="28sp"
        android:gravity="center"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/moviePoster"
        />

    <TextView
        android:id="@+id/moreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_info"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/imdbLogo"
        android:textColor="@color/colorPrimaryDark"
        android:paddingEnd="5dp"
        android:paddingStart="0dp"
        />

    <ImageView
        android:contentDescription="@string/desc"
        android:id="@+id/imdbLogo"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/imdb_blue"

        >
    </ImageView>


</RelativeLayout>
